<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/bottom_navigation_title_about" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_menu_education"
        android:title="@string/bottom_navigation_title_education" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_menu_projects"
        android:title="@string/bottom_navigation_title_projects" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_menu_contact"
        android:title="@string/bottom_navigation_title_contact" />

</menu>