<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_about">

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.dev.soarescrf.soares.ui.about.AboutFragment"
        android:label="@string/bottom_navigation_title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_education"
        android:name="com.dev.soarescrf.soares.ui.education.EducationFragment"
        android:label="@string/bottom_navigation_title_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.dev.soarescrf.soares.ui.projects.ProjectsFragment"
        android:label="@string/bottom_navigation_title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.dev.soarescrf.soares.ui.contact.ContactFragment"
        android:label="@string/bottom_navigation_title_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>