<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.activity.IntroActivity">

    <!-- Animação Lottie -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/technology_network_animation" />

    <!-- Título -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="center"
        android:shadowColor="#0099FF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/title_intro"
        android:textAlignment="center"
        android:textColor="#00BFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimationView" />

    <!-- Botão -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="#00BFFF"
        android:contentDescription="@string/accessibility_button_text_intro"
        android:fontFamily="@font/share_tech_mono"
        android:text="@string/button_text_intro"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
